# block-streamer

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.test  README.md  config.py  docker-compose.yml  helpers.py  main.py  providers.yml  pyproject.toml
core/: health.py  hotswap.py  streamer.py  w3_client.py
docs/: production_considerations.md
models/: block.py  provider.py
tests/: conftest.py
tests/integration/: test_provider_switching.py
tests/unit/: test_hotswap.py  test_models.py  test_w3_client.py
